[tool.poetry]
name = "copier-python-template"
version = "0.0.1"
description = "Python project template for use with Copier."
authors = ["Erik Oosterop"]
maintainers = ["Erik Oosterop"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/EJOOSTEROP/copier-python"
documentation = ""
keywords = ["copier", "python", "template"]


[tool.poetry.scripts]
# quke = "quke.quke:quke"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
# pytest-cov = "^4.1.0"
# pytest = "^7.4.0"
# requests-mock = "^1.11.0"
toml-sort = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "expensive: uses API key and likely paid or at least limited resources (deselect with '-m \"not expensive\"')",
    "serial",
]


