[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "copier-python-template"
version = "0.7.2"
description = "Python project template for use with Copier."
authors = ["Erik Oosterop"]
maintainers = ["Erik Oosterop"]
license = "MIT"
readme = "readme.md"
homepage = ""
repository = "https://github.com/EJOOSTEROP/copier-python"
documentation = ""
keywords = ["copier", "python", "template"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
# pytest-cov = "^4.1.0"
# pytest = "^7.4.0"
# requests-mock = "^1.11.0"
toml-sort = "^0.23.1"

[tool.poetry.scripts]

[tool.pytest.ini_options]
markers = [
  "expensive: uses API key and likely paid or at least limited resources (deselect with '-m \"not expensive\"')",
  "serial"
]

[tool.tomlsort]
all = true
in_place = true
trailing_comma_inline_array = true
